<resources>
    <string name="app_name">Montessori</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">Nice to meet you, come join our community!
        <br><b>Login</b> if you already have am account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_im">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_have_account">
        I already have an account <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="title_activity_coba">cobaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
        <font color="#00C9B8"><b>Reset Password</b></font> if you forget your password.
    </string>
    <string name="btn_reset_pw">Reset Password</string>
    <string name="back_to_login">
        Back to <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="register_as_parents">Register As Parents</string>
    <string name="register_as_professional">Register As Professional</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="post_approved_message">%s\'s post approved!</string>
    <string name="post_rejected_message">%s\'s post rejected.</string>

    <string name="search">Search</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="pembelajaran">
        <item>Practical Life</item>
        <item>Language</item>
        <item>Math</item>
        <item>Sensorial</item>
    </string-array>

    <string-array name="umur">
        <item>0-6 tahun</item>
        <item>6-12 tahun</item>
        <item>12-18 tahun</item>
        <item>18-24 tahun</item>
    </string-array>
    <string name="total_like_template">%d like</string>
    <string name="total_likes_template">%d likes</string>
    <string name="name_template">Writer: %s (%s)</string>
    <string name="category_template">Category: %s, %s</string>
    <string name="status_template">Status: %s</string>

    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent laoreet nisl vitae.</string>
</resources>